# InverseKinematics

./: .gitignore  CMakeLists.txt  README.md
include/: InverseKinematics.h
include/InverseKinematics/: InverseKinematics.cpp  InverseKinematics.h
include/Utility/: dmotion_math.hpp
matlab/: kinematics_test.m  kinematics_test.m~
src/: KinematicSolver.cpp  KinematicSolver.h
test/: InvKin_test.cpp
